--- a/docs/en/ml/functions.asciidoc
+++ b/docs/en/ml/functions.asciidoc
@@ -44,11 +44,8 @@ When you use `summary_count_field_name`, the {ml} features expect the input
 data to be pre-aggregated. The value of the `summary_count_field_name` field
 must contain the count of raw events that were summarized. In {kib}, use the
 **summary_count_field_name** in advanced jobs. Analyzing aggregated input data
-provides a significant boost in performance.
-
-////
-TODO: Add link to aggregations topic when it is available.
-////
+provides a significant boost in performance. For more information, see
+<<ml-configuring-aggregation>>.
 
 If your data is sparse, there may be gaps in the data which means you might have
 empty buckets. You might want to treat these as anomalies or you might want these
