[DOCS] Create landing page for ML functions (elastic/x-pack-elasticsearch#1640)
Original commit: elastic/x-pack-elasticsearch@06c7c22e69e49dc1ffd5e778b2de691905c0f8b4

--- a/docs/en/ml/functions.asciidoc
+++ b/docs/en/ml/functions.asciidoc
@@ -1,6 +1,5 @@
-[float]
 [[ml-functions]]
-=== Analytical Functions
+== Function Reference
 
 The {xpackml} features include analysis functions that provide a wide variety of
 flexible ways to analyze data for anomalies.
@@ -69,3 +68,11 @@ The table below provides a high-level summary of the analytical functions provid
 * <<ml-rare-functions>>
 * <<ml-sum-functions>>
 * <<ml-time-functions>>
+
+include::functions/count.asciidoc[]
+include::functions/geo.asciidoc[]
+include::functions/info.asciidoc[]
+include::functions/metric.asciidoc[]
+include::functions/rare.asciidoc[]
+include::functions/sum.asciidoc[]
+include::functions/time.asciidoc[]
