[ML] Add force delete job option (elastic/x-pack-elasticsearch#1612)
* Add force delete job option

* Can’t kill a process on a 5.4 node

* Address review comments

* Rename KillAutodetectAction -> KillProcessAction

* Review comments

* Cancelling task is superfluous after it has been killed

* Update docs

* Revert "Cancelling task is superfluous after it has been killed"

This reverts commit 576950e2e1ee095b38174d8b71de353c082ae953.

* Remove unnecessary TODOs and logic that doesn't alwasys force close

Original commit: elastic/x-pack-elasticsearch@f8c8b38217c5608c4eb9206e30a77f6d7db1eb74

--- a/docs/en/rest-api/ml/delete-job.asciidoc
+++ b/docs/en/rest-api/ml/delete-job.asciidoc
@@ -20,7 +20,8 @@ IMPORTANT:  Deleting a job must be done via this API only. Do not delete the
             privileges are granted to anyone over the `.ml-*` indices.
 
 Before you can delete a job, you must delete the {dfeeds} that are associated
-with it. See <<ml-delete-datafeed,Delete {dfeeds-cap}>>.
+with it. See <<ml-delete-datafeed,Delete {dfeeds-cap}>>. Unless the `force` parameter
+is used the job must be closed before it can be deleted.
 
 It is not currently possible to delete multiple jobs using wildcards or a comma
 separated list.
@@ -29,6 +30,12 @@ separated list.
 
 `job_id` (required)::
   (string) Identifier for the job
+
+===== Query Parameters
+
+`force`::
+  (boolean) Use to forcefully delete an opened job; this method is quicker than
+  closing and deleting the job.
 
 
 ===== Authorization
