[ML] Add force delete datafeed action (elastic/x-pack-elasticsearch#1623)
When a user or client intend to delete a datafeed
and its job, there is benefit into ensuring the
datafeed has gracefully stopped (ie no data loss).
In constrast, the desired behaviour is to stop and
delete the datafeed as quickly as possible.

This change adds a force option to the delete
datafeed action. When the delete is forced,
the datafeed is isolated, its task removed and,
finally, the datafeed itself is removed from the
metadata.

relates elastic/x-pack-elasticsearch#1533

Original commit: elastic/x-pack-elasticsearch@5ae0168bf2024900dc58617c676025b428192758

--- a/docs/en/rest-api/ml/delete-datafeed.asciidoc
+++ b/docs/en/rest-api/ml/delete-datafeed.asciidoc
@@ -12,7 +12,7 @@ The delete {dfeed} API enables you to delete an existing {dfeed}.
 
 ===== Description
 
-NOTE: You must stop the {dfeed} before you can delete it.
+NOTE: Unless the `force` parameter is used, the {dfeed} must be stopped before it can be deleted.
 
 
 ===== Path Parameters
@@ -20,6 +20,12 @@ NOTE: You must stop the {dfeed} before you can delete it.
 `feed_id` (required)::
   (string) Identifier for the {dfeed}
 
+
+===== Query Parameters
+
+`force`::
+  (boolean) Use to forcefully delete a started {dfeed}; this method is quicker than
+  stopping and deleting the {dfeed}.
 
 ===== Authorization
 
