[DOCS] Move ML APIs up a level in TOC (elastic/x-pack-elasticsearch#1644)
Original commit: elastic/x-pack-elasticsearch@604872180610fec56f944905fccfbb667ba4d65b

--- a/docs/en/rest-api/index.asciidoc
+++ b/docs/en/rest-api/index.asciidoc
@@ -10,6 +10,7 @@
 * <<watcher-api, Watcher APIs>>
 * <<graph-api, Graph APIs>>
 * <<ml-apis, Machine Learning APIs>>
+* <<ml-api-definitions, Definitions>>
 --
 
 [[info-api]]
@@ -113,3 +114,4 @@ include::watcher.asciidoc[]
 
 include::graph.asciidoc[]
 include::ml-api.asciidoc[]
+include::defs.asciidoc[]
