--- a/docs/en/rest-api/ml/resultsresource.asciidoc
+++ b/docs/en/rest-api/ml/resultsresource.asciidoc
@@ -1,6 +1,6 @@
 //lcawley Verified example output 2017-04-11
 [[ml-results-resource]]
-==== Results Resources
+=== Results Resources
 
 Several different result types are created for each job. You can query anomaly
 results for _buckets_, _influencers_ and _records_ by using the results API.
@@ -44,7 +44,7 @@ timestamp or any calculated scores.
 
 [float]
 [[ml-results-buckets]]
-===== Buckets
+==== Buckets
 
 Bucket results provide the top level, overall view of the job and are best for
 alerting.
@@ -109,7 +109,7 @@ the results for the bucket.
 
 [float]
 [[ml-results-bucket-influencers]]
-===== Bucket Influencers
+==== Bucket Influencers
 
 Bucket influencer results are available as nested objects contained within
 bucket results. These results are an aggregation for each type of influencer.
@@ -171,7 +171,7 @@ An bucket influencer object has the following properties:
 
 [float]
 [[ml-results-influencers]]
-===== Influencers
+==== Influencers
 
 Influencers are the entities that have contributed to, or are to blame for,
 the anomalies. Influencer results are available only if an
@@ -249,7 +249,7 @@ filter the anomaly results more easily.
 
 [float]
 [[ml-results-records]]
-===== Records
+==== Records
 
 Records contain the detailed analytical results. They describe the anomalous
 activity that has been identified in the input data based on the detector
@@ -379,7 +379,7 @@ filter the anomaly results more easily.
 
 [float]
 [[ml-results-categories]]
-===== Categories
+==== Categories
 
 When `categorization_field_name` is specified in the job configuration, it is
 possible to view the definitions of the resulting categories. A category
