--- a/docs/en/rest-api/ml/delete-snapshot.asciidoc
+++ b/docs/en/rest-api/ml/delete-snapshot.asciidoc
@@ -1,15 +1,15 @@
 [[ml-delete-snapshot]]
-==== Delete Model Snapshots
+=== Delete Model Snapshots
 
 The delete model snapshot API enables you to delete an existing model snapshot.
 
 
-===== Request
+==== Request
 
 `DELETE _xpack/ml/anomaly_detectors/<job_id>/model_snapshots/<snapshot_id>`
 
 
-===== Description
+==== Description
 
 IMPORTANT: You cannot delete the active model snapshot. To delete that snapshot,
 first revert to a different one.
@@ -17,7 +17,7 @@ first revert to a different one.
 //TBD: Where do you see restorePriority? Per old docs, the active model snapshot
 //is "...the snapshot with the highest restorePriority".
 
-===== Path Parameters
+==== Path Parameters
 
 `job_id` (required)::
   (string) Identifier for the job
@@ -26,13 +26,13 @@ first revert to a different one.
   (string) Identifier for the model snapshot
 
 
-===== Authorization
+==== Authorization
 
 You must have `manage_ml`, or `manage` cluster privileges to use this API.
 For more information, see <<privileges-list-cluster>>.
 
 
-===== Examples
+==== Examples
 
 The following example deletes the `1491948163` snapshot:
 
