--- a/docs/en/rest-api/ml/get-category.asciidoc
+++ b/docs/en/rest-api/ml/get-category.asciidoc
@@ -1,12 +1,12 @@
 //lcawley Verified example output 2017-04-11
 [[ml-get-category]]
-==== Get Categories
+=== Get Categories
 
 The get categories API enables you to retrieve job results for one or more
 categories.
 
 
-===== Request
+==== Request
 
 `GET _xpack/ml/anomaly_detectors/<job_id>/results/categories` +
 
@@ -14,7 +14,7 @@ categories.
 
 //===== Description
 
-===== Path Parameters
+==== Path Parameters
 
 `job_id`::
   (string) Identifier for the job.
@@ -24,7 +24,7 @@ categories.
   the API returns information about all categories in the job.
 
 
-===== Request Body
+==== Request Body
 
 `page`::
 `from`:::
@@ -33,7 +33,7 @@ categories.
   (integer) Specifies the maximum number of categories to obtain.
 
 
-===== Results
+==== Results
 
 The API returns the following information:
 
@@ -42,7 +42,7 @@ The API returns the following information:
     <<ml-results-categories,Categories>>.
 
 
-===== Authorization
+==== Authorization
 
 You must have `monitor_ml`, `monitor`, `manage_ml`, or `manage` cluster
 privileges to use this API. You also need `read` index privilege on the index
@@ -51,7 +51,7 @@ roles provide these privileges. For more information, see
 <<security-privileges>> and <<built-in-roles>>.
 
 
-===== Examples
+==== Examples
 
 The following example gets information about one category for the
 `it_ops_new_logs` job:
