--- a/docs/en/rest-api/ml/get-influencer.asciidoc
+++ b/docs/en/rest-api/ml/get-influencer.asciidoc
@@ -1,22 +1,22 @@
 [[ml-get-influencer]]
-==== Get Influencers
+=== Get Influencers
 
 The get influencers API enables you to retrieve job results for one or more
 influencers.
 
 
-===== Request
+==== Request
 
 `GET _xpack/ml/anomaly_detectors/<job_id>/results/influencers`
 
 //===== Description
 
-===== Path Parameters
+==== Path Parameters
 
 `job_id`::
   (string) Identifier for the job.
 
-===== Request Body
+==== Request Body
 
 `desc`::
   (boolean) If true, the results are sorted in descending order.
@@ -45,7 +45,7 @@ influencers.
   (string) Returns influencers with timestamps after this time.
 
 
-===== Results
+==== Results
 
 The API returns the following information:
 
@@ -54,7 +54,7 @@ The API returns the following information:
   For more information, see <<ml-results-influencers,Influencers>>.
 
 
-===== Authorization
+==== Authorization
 
 You must have `monitor_ml`, `monitor`, `manage_ml`, or `manage` cluster
 privileges to use this API. You also need `read` index privilege on the index
@@ -63,7 +63,7 @@ roles provide these privileges. For more information, see
 <<security-privileges>> and <<built-in-roles>>.
 
 
-===== Examples
+==== Examples
 
 The following example gets influencer information for the `it_ops_new_kpi` job:
 
